<resources>
    <string name="app_name">talkShow</string>

    <string name="cadastro">Cadastro Anunciante</string>
    <string name="action_settings">Settings</string>
    <string name="nome_hint">Nome</string>
    <string name="sobrenome_hint">Sobrenome</string>
    <string name="endereco_hint">Endereço</string>
    <string name="cpf_hint">Cpf</string>
    <string name="login_hint">Login</string>
    <string name="senha_hint">Senha</string>
    <string name="enviar">Enviar</string>
    <string name="sexo_m">Masculino</string>
    <string name="sexo_f">Feminino</string>
    <string name="data">00/00/0000</string>

    <string name="usuario">Cadastro Usuário</string>
    <string name="NomeUsuario">Nome</string>
    <string name="SobrenomeUsuario">Sobrenome</string>
    <string name="EnderecoUsuario">Endereço</string>
    <string name="CpfUsuario">Cpf</string>
    <string name="LoginUsuario">Login</string>
    <string name="SenhaUsuario">Senha</string>
    <string name="EnviarUsuario">Enviar</string>
    <string name="Sexo_m_Usuario">Masculino</string>
    <string name="Sexo_f_Usuario">Feminino</string>
    <string name="DataUsuario">00/00/0000</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_anunciante_cade">AnuncianteCade</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_talk_show">TalkShow</string>




</resources>
