<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".talkShow"
    android:background="@android:color/black">

    <TextView android:text="@string/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:theme="@style/AppTheme"
        android:textColor="#FFFF"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tituloAnuncianteCadastro" />

    <LinearLayout
        android:id="@+id/cadastroAnunciante"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tituloAnuncianteCadastro"
        android:layout_alignParentLeft="true"
        android:theme="@android:style/Theme.Black"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/nomeAnunc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_hint"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/sobrenomeAnunc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sobrenome_hint"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/enderecoAnunc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endereco_hint"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/cpfAnunc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf_hint"
            android:inputType="textNoSuggestions" />
        <RadioGroup
            android:id="@+id/radioGroupAnunc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sexo_m"
            android:clickable="true"
            android:id="@+id/sexo_MAnunc"
            android:text="M"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sexo_f"
            android:clickable="true"
            android:id="@+id/sexo_FAnunc"
            android:text="F"/>
          </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dataAnunc"
            android:hint="@string/data"/>

        <EditText
            android:id="@+id/loginAnunc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/senhaAnunc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha_hint"
            android:inputType="textNoSuggestions" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enviarAnunc"
            android:hint="@string/enviar"/>





    </LinearLayout>

</RelativeLayout>
