<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifba.talkshow.Fragment_Usuario"
    android:background="@android:color/black">

    <TextView android:text="@string/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:theme="@style/AppTheme"
            android:textColor="#FFFF"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/titutloUserCadastro"
    />

    <LinearLayout
            android:id="@+id/cadastroUsuario"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/titutloUserCadastro"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:theme="@android:style/Theme.Black">

            <EditText
                android:id="@+id/NomeUsuario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_hint"
                android:inputType="textNoSuggestions"
            />

            <EditText
                android:id="@+id/SobrenomeUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sobrenome_hint"
                android:inputType="textNoSuggestions"
            />

            <EditText
                android:id="@+id/EnderecoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco_hint"
                android:inputType="textNoSuggestions"
            />

            <EditText
                android:id="@+id/CpfUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf_hint"
                android:inputType="textNoSuggestions"
            />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Sexo_m_Usuario"
            />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Sexo_f_Usuario"
            />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/DataUsuario"
                android:hint="@string/data"
            />

            <EditText
                android:id="@+id/LoginUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint"
                android:inputType="textNoSuggestions"
            />

            <EditText
                android:id="@+id/SenhaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_hint"
                android:inputType="textNoSuggestions"
            />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EnviarUsuario"
                android:hint="@string/enviar"
            />





        </LinearLayout>



</RelativeLayout>
